fix(photoalbums): collapse preview items under albums

--- a/resources/sass/plugins/_photoalbum.scss
+++ b/resources/sass/plugins/_photoalbum.scss
@@ -26,6 +26,26 @@
     }
 }
 
+.photoalbum-manual-sort__toggle {
+    display: inline-flex;
+    align-items: center;
+    color: inherit;
+    text-decoration: none;
+}
+
+.photoalbum-manual-sort__toggle:hover,
+.photoalbum-manual-sort__toggle:focus {
+    text-decoration: none;
+}
+
+.photoalbum-manual-sort__toggle-icon {
+    transition: transform 0.2s ease;
+}
+
+.photoalbum-manual-sort__toggle[aria-expanded="true"] .photoalbum-manual-sort__toggle-icon {
+    transform: rotate(90deg);
+}
+
 // Leave some space when scrolling to anchors after sort operations
 .photoalbum-manual-sort__item {
     scroll-margin-top: 120px;
